<resources>
    <string name="app_name">App semana 2</string>
    <string name="Nombre">Nombre Contacto</string>
    <string name="Telefono">Telefono</string>
    <string name="Mail">Mail</string>
    <string name="Descripcion">Descripción Contacto</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Fecha">--/--/--</string>
    <string name="title_activity_confirmar_datos">ConfirmarDatos</string>
    <string name="EditarDatos">Editar Datos</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>